changes for launch/live

--- a/server/emails/payment-received.html
+++ b/server/emails/payment-received.html
@@ -103,7 +103,7 @@
         <div class="container">
             <div class="content text-center">
                 <img
-                    src="https://testnet.hashfast.app/images/email-logo-hashfast.png"
+                    src="https://www.hashfast.app/images/email-logo-hashfast.png"
                     alt="HashFast Logo"
                     width="191"
                     height="35"
